2012-12-07  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/coff.c, gpasm/gperror.c, gpasm/parse.y, gpasm/lst.c,
    gpasm/directive.c:
    error message and listing enhancements
  * gpasm/testsuite/gpasm.mchip/asmfiles/files1.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/files1.lst
    gpasm/testsuite/gpasm.mchip/listfiles/files2.lst
    regression tests adapted for gpasm

2012-12-05  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/listfiles/op16e.lst,
    gpasm/testsuite/gpasm.project/listfiles/op12.lst,
    gpasm/testsuite/gpasm.project/listfiles/op14.lst,
    gpasm/testsuite/gpasm.project/listfiles/op16.lst,
    gpasm/testsuite/gpasm.project/listfiles/pageselw2.lst,
    gpasm/testsuite/gpasm.project/listfiles/sx.lst:
    moved to gpasm/testsuite/gpasm.project/objlstfiles
    gpasm/testsuite/gpasm.project/objlstfiles/op12.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/op14.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/op16.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/config2.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/config3.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/op14e.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/extern_segv.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/pageselw2.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/sx.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data1.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/code_pack2.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/op16e.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/code_pack3.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data2.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data3.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/config3e.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data4.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data5.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/data3e.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/code_pack.lst,